--- a/foodder-front/public/index.html
+++ b/foodder-front/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-GuopT_hDN4kzhiNlZZVZTKboEdlLJ0o&libraries=places"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
